tests/machine/x/rust/json_builtin.error
line 0: compile: exit status 1
error[E0425]: cannot find function `json` in this scope
 --> /workspace/mochi/tests/machine/x/rust/json_builtin.rs:3:5
  |
3 |     json(m);
  |     ^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.

fn main() {
